--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "deploy": "aws s3 sync build/ s3://xplained.fyi",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-aws": "node aws-deploy.js"
   },
   "eslintConfig": {
     "extends": [
